MINOR: Fixed landing page summary spacing between images

--- a/src/scss/pages/_landing-page.scss
+++ b/src/scss/pages/_landing-page.scss
@@ -1,6 +1,8 @@
 .page-summary {
   padding-left: 0;
   list-style: none;
+  float: left;
+  width: 100%;
 }
 .page-summary-title {
   display: inline-block;
